deploy/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kanfer-test-service
spec:
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: kanfer-test
